<resources>
    <string name="app_name">Disaster Management</string>
    <string name="cyclone">Cyclone</string>
    <string name="earthquake">Earthquake</string>
    <string name="flood">Flood</string>
    <string name="calamities">Calamities</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="shelter">Shelter</string>
    <string name="my_map_api_key">AIzaSyA1TprBqdrHTlbFoi4mpl_Y9yhFLnDd1Os</string>
    <string name="steps1"><![CDATA[\n \t1. Check the house; secure loose tiles and carry out repairs of doors and windows\n \t2. Remove dead branches or dying trees close to the house; anchor removable objects such as lumber piles, loose tin sheets, loose bricks, garbage cans, sign-boards etc. which can fly in strong winds\n \t3. Keep some wooden boards ready so that glass windows can be boarded if needed\n \t4. Keep a hurricane lantern filled with kerosene, battery operated torches and enough dry cells\n \t5. Demolish condemned buildings\n \t6. Keep some extra batteries for transistors\n \t7. Keep some dry non-perishable food always ready for use in emergency\n]]></string>
    <string name="steps2"><![CDATA[The actions that need to be taken in the event of a cyclone threat can broadly be divided into:\n \t1. Immediately before the cyclone season\n \t2. When cyclone alerts and warnings are communicated\n \t3. When evacuations are advised\n \t4. When the cyclone has crossed the coast\n]]></string>
    <string name="before_the_cyclone_season">Before the Cyclone season:</string>
    <string name="steps3"><![CDATA[\t1. Listen to the radio.\n \t2. Keep monitoring the warnings. This will help you prepare for a cyclone emergency.\n \t3. Pass the information to others.\n \t4. Ignore rumours and do not spread them; this will help to avoid panic situations.\n \t5. Believe in the official information\n \t6. When a cyclone alert is on for your area continue normal working but stay alert to the radio warnings.\n \t7. Stay alert for the next 24 hours as a cyclone alert means that the danger is within 24 hours.\n \t8. When your area is under cyclone warning get away from low-lying beaches or other low-lying areas close to the coast\n]]></string>
    <string name="steps4">\t\t1. Leave early before your way to high ground or shelter gets flooded\n \t\t2. Do not delay and run the risk of being marooned\n \t\t3. If your house is securely built on high ground take shelter in the safe part of the house. However, if asked to evacuate do not hesitate to leave the place.\n \t\t4. Board up glass windows or put storm shutters in place.\n \t\t5. Provide strong suitable support for outside doors.\n \t\t6. If you do not have wooden boards handy, paste paper strips on glasses to prevent splinters. However, this may not avoid breaking windows.\n \t\t7. Get extra food, which can be eaten without cooking. Store extra drinking water in suitably covered vessels.\n \t\t8. If you have to evacuate the house move your valuable articles to upper floors to minimize flood damage.\n \t\t9. Ensure that your hurricane lantern, torches or other emergency lights are in working condition and keep them handy.\n \t\t10. Small and loose things, which can fly in strong winds, should be stored safely in a room.\n \t\t11. Be sure that a window and door can be opened only on the side opposite to the one facing the wind.\n \t\t12. Make provision for children and adults requiring special diet.\n \t\t13. If the centre of the cyclone is passing directly over your house there will be a lull in the wind and rain lasting for half an hour or so. During this time do not go out; because immediately after that, very strong winds will blow from the opposite direction.\n \t\t14. Switch off the electrical mains in your house.\n \t\t15. Remain calm.\n</string>
    <string name="steps5">DO NOT venture out even when the winds appear to calm down. The \'eye\' of the cyclone might be passing. Winds might intensify and gush again and cause damage. Be safe inside till it is officially announced that the cyclone has passed.</string>
    <string name="steps6">\t1. Pack essentials for yourself and your family to last a few days. These should include medicines, special food for babies and children or elders.\n \t2. Head for the proper shelter or evacuation points indicated for your area.\n \t3. Do not worry about your property\n \t4. At the shelter follow instructions of the person in charge.\n \t5. Remain in the shelter until you are informed to leave\n</string>
    <string name="steps7">\t1. You should remain in the shelter until informed that you can return to your home.\n \t2. You must get inoculated against diseases immediately.\n \t3. Strictly avoid any loose and dangling wires from lamp posts.\n \t4. If you have to drive, do drive carefully.\n \t5. Clear debris from your premises immediately.\n \t6. Report the correct losses to appropriate authorities.\n</string>
    <string name="stepsf1">\t1. Avoid building in flood prone areas unless you elevate and reinforce your home.\n \t2. Elevate the furnace, water heater, and electric panel if susceptible to flooding.\n \t3. Install Check Valves in sewer traps to prevent floodwater from backing up into the drains of your home.\n \t4. Contact community officials to find out if they are planning to construct barriers (levees, beams and floodwalls) to stop floodwater from entering the homes in your area.\n \t5. Seal the walls in your basement with waterproofing compounds to avoid seepage.\n \n</string>
    <string name="stepsf2">\t1. Listen to the radio or television for information.\n \t2. Be aware that flash flooding can occur. If there is any possibility of a flash flood, move immediately to higher ground. Do not wait for instructions to move.\n \t3. Be aware of streams, drainage channels, canyons, and other areas known to flood suddenly. Flash floods can occur in these areas with or without such typical warnings as rain clouds or heavy rain.\n \n</string>
    <string name="stepse1">1. Repair deep plaster cracks in ceilings and foundations. Get expert advice if there are signs of structural defects.\n 2. Anchor overhead lighting fixtures to the ceiling.\n 3. Follow BIS codes relevant to your area for building standards.\n 4. Fasten shelves securely to walls.\n 5. Place large or heavy objects on lower shelves.\n 6. Store breakable items such as bottled foods, glass, and china in low, closed cabinets with latches.\n 7. Hang heavy items such as pictures and mirrors away from beds, settees, and anywhere that people sit.\n 8. Brace overhead light and fan fixtures.\n 9. Repair defective electrical wiring and leaky gas connections. These are potential fire risks.\n 10. Secure water heaters, LPG cylinders etc., by strapping them to the walls or bolting to the floor.\n 11. Store weed killers, pesticides, and flammable products securely in closed cabinets with latches and on bottom shelves.\n 12. Identify safe places indoors and outdoors.\n - Under strong dining table, bed\n - Against an inside wall\n - Away from where glass could shatter around windows, mirrors, pictures, or where heavy bookcases or other heavy furniture could fall over\n - In the open, away from buildings, trees, telephone and electrical lines, flyovers and bridges\n 13. Know emergency telephone numbers (such as those of doctors, hospitals, the police, etc).\n 14. Educate yourself and family members\n - PSHA Table at Grid Points\n</string>
    <string name="stepse2">- Battery operated torch with extra batteries\n - Battery operated radio\n - First aid kit and manual\n - Emergency food (dry items) and water (packed and sealed)\n - Candles and matches in a waterproof container\n - Knife\n - Chlorine tablets or powdered water purifiers\n - Can opener\n - Essential medicines\n - Cash and credit cards\n - Thick ropes and cords\n - Sturdy shoes\n</string>
    <string name="stepse3">- In case family members are separated from one another during an earthquake (a real possibility during the day when adults are at work and children are at school), develop a plan for reuniting after the disaster.\n - Ask an out-of-state relative or friend to serve as the \'family contact\' after the disaster; it is often easier to call long distance. Make sure everyone in the family knows the name, address, and phone number of the contact person.\n 17. Help your community get ready\n</string>
    <string name="stepse4">- Publish a special section in your local newspaper with emergency information on earthquakes. Localize the information by printing the phone numbers of local emergency services offices and hospitals.\n - Conduct week-long series on locating hazards in the home.\n - Work with local emergency services and officials to prepare special reports for people with mobility impairment on what to do during an earthquake.\n - Provide tips on conducting earthquake drills in the home.\n - Interview representatives of the gas, electric, and water companies about shutting off utilities.\n - Work together in your community to apply your knowledge to building codes, retrofitting programmes, hazard hunts, and neighborhood and family emergency plans.\n \n</string>
    <string name="stepse5">Stay as safe as possible during an earthquake. Be aware that some earthquakes are actually foreshocks and a larger earthquake might occur. Minimize your movements to a few steps that reach a nearby safe place and stay indoors until the shaking has stopped and you are sure exiting is safe.\n \n</string>
    <string name="stepse6">1. DROP to the ground; take COVER by getting under a sturdy table or other piece of furniture; and HOLD ON until the shaking stops. If there is no table or desk near you, cover your face and head with your arms and crouch in an inside corner of the building.\n 2. Protect yourself by staying under the lintel of an inner door, in the corner of a room, under a table or even under a bed.\n 3. Stay away from glass, windows, outside doors and walls, and anything that could fall, (such as lighting fixtures or furniture).\n 4. Stay in bed if you are there when the earthquake strikes. Hold on and protect your head with a pillow, unless you are under a heavy light fixture that could fall. In that case, move to the nearest safe place.\n 5. Use a doorway for shelter only if it is in close proximity to you and if you know it is a strongly supported, load bearing doorway.\n 6. Stay inside until the shaking stops and it is safe to go outside. Research has shown that most injuries occur when people inside buildings attempt to move to a different location inside the building or try to leave.\n 7. Be aware that the electricity may go out or the sprinkler systems or fire alarms may turn on.\n \n</string>
    <string name="stepse7">1. Do not move from where you are. However, move away from buildings, trees, streetlights, and utility wires.\n 2. If you are in open space, stay there until the shaking stops. The greatest danger exists directly outside buildings; at exits; and alongside exterior walls. Most earthquake-related casualties result from collapsing walls, flying glass, and falling objects.\n \n If in a moving vehicle:\n 1. Stop as quickly as safety permits and stay in the vehicle. Avoid stopping near or under buildings, trees, overpasses, and utility wires.\n 2. Proceed cautiously once the earthquake has stopped. Avoid roads, bridges, or ramps that might have been damaged by the earthquake.\n \n</string>
    <string name="stepse8">1. Do not light a match.\n 2. Do not move about or kick up dust.\n 3. Cover your mouth with a handkerchief or clothing.\n 4. Tap on a pipe or wall so rescuers can locate you. Use a whistle if one is available. Shout only as a last resort. Shouting can cause you to inhale dangerous amounts of dust.\n</string>
</resources>